include $(top_srcdir)/am_include.mk

noinst_LTLIBRARIES=libftrs.la
libftrs_la_SOURCES=\
BTreeExecStream.cpp \
BTreeInsertExecStream.cpp \
BTreeReadExecStream.cpp \
BTreeScanExecStream.cpp \
BTreeSearchExecStream.cpp \
BTreeSearchUniqueExecStream.cpp \
BTreeSortExecStream.cpp \
FtrsTableWriter.cpp \
FtrsTableWriterExecStream.cpp \
FtrsTableWriterFactory.cpp
