include $(top_srcdir)/am_include.mk

noinst_LTLIBRARIES=libtuple.la
libtuple_la_SOURCES=\
AttributeAccessorImpl.cpp \
StandardTypeDescriptor.cpp \
TupleAccessor.cpp \
TupleData.cpp \
TupleDescriptor.cpp \
TuplePrinter.cpp \
TupleProjectionAccessor.cpp \
TupleDataWithBuffer.cpp

DESIGN_DOC=TupleDesign.cpp
EXTRA_DIST=$(DESIGN_DOC)
TAGS_DEPENDENCIES=$(DESIGN_DOC)
ETAGS_ARGS=$(DESIGN_DOC)
